--- a/index.html
+++ b/index.html
@@ -132,9 +132,9 @@
                         ,0.5);" placeholder="Enter City Here" autocomplete="off" required>
                 </div>
 
-                <div id='button-box' data-aos="rotate-c"
+                <div id=' button-box' data-aos="rotate-c"
                     class="background_one d-flex justify-content-center align-items-center  text-center mt-4"
-                    style="width:220px;height:100px;background-repeat: no-repeat;background-position: center;">
+                    style="background-repeat: no-repeat;background-position: center;">
                     <button id="search-button" type="submit" class="btn btn-primary font-weight-bold" style="background: none !important;border:none;transition-property: all;
                         transition-duration: 0.5s;
                         transition-timing-function: cubic-bezier(0.65,-0.25,0.25,1.95);" onclick="changeimage()"
@@ -295,7 +295,7 @@
         </section>
 
         <footer>
-            <div class="text-center h4">Designed by : Pratiksha Doke</div>
+            <div class="text-center font-weight-bold h4">Designed by : Pratiksha Doke</div>
         </footer>
     </section>
 
