--- a/index.html
+++ b/index.html
@@ -63,7 +63,6 @@
 
         .background_one {
             background-image: url('suniss.svg');
-            width: 220px;
             font-weight: 600;
             height: 100px;
             display: flex;
@@ -292,7 +291,7 @@
         </section>
 
         <footer>
-            <div class="text-center h4">Designed by : Pratiksha Doke</div>
+            <div class="text-center font-weight-bold h4">Designed by : Pratiksha Doke</div>
         </footer>
     </section>
 
