--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                     <button id="search-button" type="submit" class="btn btn-primary font-weight-bold" style="background: none !important;border:none;transition-property: all;
                         transition-duration: 0.5s;
                         transition-timing-function: cubic-bezier(0.65,-0.25,0.25,1.95);" aria-required="true"
-                        onsubmit="getdata()">Search</button>
+                        >Search</button>
                 </div>
 
             </form>
